# visit-rs

./: Cargo.toml
visit-rs/: Cargo.toml
visit-rs-derive/: Cargo.toml
visit-rs-derive/src/: attrs.rs  enum_variants.rs  helpers.rs  lib.rs
visit-rs/examples/: async_visitor.rs  named_visitor.rs  static_async_visitor.rs  static_named_visitor.rs  static_visitor.rs  struct_info.rs  struct_info_rename.rs  unsized_types.rs  visitor.rs
visit-rs/src/: lib.rs  metadata.rs  serde.rs
visit-rs/tests/: attributes.rs  enum.rs  enum_manual.rs  enum_rename.rs  struct.rs  test.rs  unsized_types.rs
