[package]
name = "visit-rs"
version = "0.1.2"
edition = "2024"
description = "A generic visitor pattern library for Rust"
license = "MIT"
documentation = "https://docs.rs/visit-rs"
repository = "https://github.com/dr-bonez/visit-rs"

[features]
default = ["serde"]

[dependencies]
async-stream = "0.3"
futures = "0.3"
visit-rs-derive = { version = "=0.1.0", path = "../visit-rs-derive" }

serde = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
