[package]
description = "A generic visitor pattern library for Rust"
documentation = "https://docs.rs/visit-rs"
edition = "2024"
license = "MIT"
name = "visit-rs"
repository = "https://github.com/dr-bonez/visit-rs"
version = "0.1.8"

[features]
default = ["serde"]

[dependencies]
async-stream = "0.3"
futures = "0.3"
visit-rs-derive = { version = "=0.1.6", path = "../visit-rs-derive" }

serde = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
